atualizado Nome , data , e Diretor

--- a/pages/tom-holland/spiderman3.html
+++ b/pages/tom-holland/spiderman3.html
@@ -35,14 +35,14 @@
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2007)"
-            title="Spiderman 3 (2007)" />
+            title="spider man no way home (2021)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2007</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2021</li>
+              <li>Diretor: Jon Wats </li>
             </ul>
           </div>
           <div class="s-description__text">
