--- a/pages/andrew-garfield/spiderman1.html
+++ b/pages/andrew-garfield/spiderman1.html
@@ -35,14 +35,14 @@
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-andrew/movie-01/logo.png" alt="Spiderman (2002)"
-            title="Spiderman (2002)" />
+            title="O Espetacular Homem-Aranha 1 (2012)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2002</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2012</li>
+              <li>Diretor: Mark Weber</li>
             </ul>
           </div>
           <div class="s-description__text">
