--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -36,14 +36,14 @@
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2005)"
-            title="Spiderman 2 (2005)" />
+            title="O Espetacular Homem-Aranha 2 (2014)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2005</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2014</li>
+              <li>Diretor: Mark Weber</li>
             </ul>
           </div>
           <div class="s-description__text">
