--- a/pages/tobey-maguire/spiderman3.html
+++ b/pages/tobey-maguire/spiderman3.html
@@ -34,13 +34,13 @@
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-tobey/movie-03/logo.png" alt="Spiderman (2002)"
-            title="Spiderman (2002)" />
+            title="Spiderman 3 (2007)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2002</li>
+              <li>Ano: 2007</li>
               <li>Diretor: Sam Raimi</li>
             </ul>
           </div>
