--- a/pages/tom-holland/spiderman1.html
+++ b/pages/tom-holland/spiderman1.html
@@ -35,14 +35,14 @@
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-tom/movie-01/logo.png" alt="Spiderman (2002)"
-            title="Spiderman (2002)" />
+            title="Spiderman HomeComming (2017)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2002</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2017</li>
+              <li>Diretor: Jon Wats</li>
             </ul>
           </div>
           <div class="s-description__text">
