--- a/pages/tom-holland/spiderman2.html
+++ b/pages/tom-holland/spiderman2.html
@@ -35,14 +35,14 @@
       <div class="s-main-content__top">
         <div class="s-logo">
           <img src="../../assets/images/spiderman-tom/movie-02/logo.png" alt="Spiderman 2 (2005)"
-            title="Spiderman 2 (2005)" />
+            title="spider man far from home (2019)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2005</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2019</li>
+              <li>Diretor: Jon Wats</li>
             </ul>
           </div>
           <div class="s-description__text">
